--- a/templates/caselog/mobile_landing/index.ejs
+++ b/templates/caselog/mobile_landing/index.ejs
@@ -27,7 +27,7 @@
       <div class="Grid-cell">
         <div class="element u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="fontWeight700 newLandingTitle">a UX designer focused on clean, scalable experiences that drive real impact.
           </h1>
@@ -100,7 +100,7 @@
 
   </div>
 
-  <div class="blankHTiny"></div>
+  <div class="spacingSmall"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
@@ -314,7 +314,7 @@
           <a class="no-hover-effect" href="/glorify/">
             <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Experiment',
@@ -339,7 +339,7 @@
           <a class="no-hover-effect" href="/seer/">
             <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -368,7 +368,7 @@
           <a class="no-hover-effect" href="/appointa/">
             <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -428,7 +428,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Design System Creation & Optimization</h1>
 
@@ -487,14 +487,14 @@
         <div class="Grid-cell">
           <div class="element">
             <h1 class="specialTextL"> About Me</h1>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
           </div>
         </div>
       </div>
     </div>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
 
     <div class="wrapper">
@@ -588,7 +588,7 @@
             </div>
           </div>
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
