--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2990,7 +2990,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
         <div class="wrapper">
           <div class="element">
             <div id="tabsContent" class="tabContent">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <!-- Tab 1 -->
               <div class="Grid Grid--full Grid--gutters">
@@ -3024,7 +3024,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                   </div>
                 </div>
               </div>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
 
               <%- include(`${templatePath}/shared/block_copyCode`, {
@@ -3725,7 +3725,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     </div>
                   </nav>
                 </div>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
                 <%- include(`${templatePath}/shared/block_copyCode`, {
                   copyCodeName:'navHeader', 
