--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -26,7 +26,7 @@
       <div class="Grid-cell">
         <div class="element displayLaptop  u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
 
@@ -35,7 +35,7 @@
         </div>
         <div class="element displayTablet  u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
 
@@ -45,7 +45,7 @@
         <div class="element displayPhone">
           <div class="element">
             <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
             <h1 class="specialTextTitle fontWeight700">that are </h1>
@@ -447,7 +447,7 @@
     <!-- Arrow -->
     <%- include('shared/comp_textualElements_arrow', {message: 'Experiments' }) %>
     <!-- Arrow -->
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -455,7 +455,7 @@
           <a class="no-hover-effect" href="/glorify/">
             <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Experiment',
@@ -480,7 +480,7 @@
           <a class="no-hover-effect" href="/seer/">
             <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -511,7 +511,7 @@
           <a class="no-hover-effect" href="/appointa/">
             <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -624,7 +624,7 @@
             </div>
           </div>
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
@@ -717,7 +717,7 @@
             <div class="elementTB">
 
               <div class="element">
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
                 <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
               </div>
@@ -747,7 +747,7 @@
               <div class="Grid-cell">
                 <div class="elementTB">
                   <h4> <strong> Projects </strong> </h4>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <h6 class="fontWeight400">Faster Appointment Management
                   </h6>
                   <h6>For pet business owners booking appointments for their customers
@@ -756,7 +756,7 @@
                   <h6 class="fontWeight400"> Customer Booking Experience
                   </h6>
                   <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
                   </h6>
                   <h6>Optimize the B2B onboarding and subscription experience</h6>
@@ -764,17 +764,17 @@
 
 
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <h6 class="fontWeight400"> RX Zero</h6>
                   <h6>Subscription-based generic medication selling</h6>
 
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <h6 class="fontWeight400"> Savings Calculator</h6>
 
                   <h6>Uncover Prescription Meds Savings</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <h6 class="fontWeight400">Admin Panel</h6>
                   <h6>Empowering CX managers and sales teams</h6>
                 </div>
@@ -785,20 +785,20 @@
                 <div class="elementTB">
 
                   <h4> <strong> Experiments </strong> </h4>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/glorify/">
                     <h6 class="fontWeight400"> Glorify</h6>
                   </a>
                   <h6>Elevating Community Involvement</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
 
                   <a href="/appointa/">
                     <h6 class="fontWeight400"> Appointa</h6>
                   </a>
                   <h6>Simplifying Interview Coordination</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/seer/">
                     <h6 class="fontWeight400">Seer</h6>
                   </a>
