--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -31,7 +31,7 @@
   <div class="marginM">
 
     <div class="wrapper colorBgVW pattern2 shadowBox">
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
 
       <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -67,38 +67,41 @@
 
 
             <h5 class="fontWeight500">University of California, Berkeley </h5>
-            <h6 class="fontWeight300">Master of Architecture | <span class="textItalic fontWeight300"> Architecture & Building Science/Technology</span></h6>
-            <h6 class="textItalic"> Aug. 2015 - May 2017</h6>
-            <h6 class="textItalic"> Aug. 2018 - May 2019</h6>
+            <h6 class="textItalic"> Master of Architecture Graduated May 2019</h6>
+
+            <h6 class="fontWeight300">College of Environmental Design</h6>
+            <h6 class="fontWeight300">Architecture & Building Science/Technology</h6>
 
 
-            <div class="blankHTiny"></div>
+
+            <div class="spacingSmall"></div>
 
             <h5 class="fontWeight500">Beijing University of Technology </h5>
 
-            <h6 class="fontWeight300">Bachelor of Art | <span class="textItalic fontWeight300"> Art &amp; Design &amp; Landscape Design</span></h6>
-            <h6 class="textItalic"> Sep. 2009 - Jul. 2013</h6>
-            <div class="blankHTiny"></div>
+            <h6 class="textItalic">Bachelor of Art Graduated June 2013 </h6>
+            <h6 class="fontWeight300"> Art &amp; Design &amp; Landscape Design</h6>
+            <div class="spacingSmall"></div>
 
             <h5 class="fontWeight500">Certifications </h5>
-            <h6 class="textItalic TextPoppins fontWeight300">Google UX Design Professional Certificate:</h6>
-            <h6>Start the UX Design Process: Empathize, Define, and Ideate <span class="textItalic fontWeight200 TextPoppins Grey700">(Oct. 2021)</span></h6>
-            <h6>Foundations of UX Design <span class="textItalic fontWeight200 TextPoppins Grey700">(Sep. 2021)</span></h6>
-            <div class="blankHTiny"></div>
+            <h6 class="textItalic TextPoppins fontWeight300">Google UX Design Professional Certificate: <span class="textItalic fontWeight200 TextPoppins Grey700"></span></h6>
+            <h6>Empathize, Define, and Ideate<span class="textItalic fontWeight200 TextPoppins Grey700"> (Oct. 2021)</span></h6>
+            <h6>Foundations of UX Design<span class="textItalic fontWeight200 TextPoppins Grey700"> (Sep. 2021)</span></h6>
+
+            <div class="spacingSmall"></div>
 
 
             <h6 class="textItalic TextPoppins fontWeight300">Codecademy:</h6>
-            <h6>User Research (Apr 2023)</h6>
-            <h6>Design Thinking (Apr 2023)</h6>
+            <h6>User Research <span class="textItalic fontWeight200 TextPoppins Grey700">(Apr 2023)</span></h6>
+            <h6>Design Thinking <span class="textItalic fontWeight200 TextPoppins Grey700">(Apr 2023)</span></h6>
 
-            <h6>Interaction Design (May 2023)</h6>
-            <h6>JavaScript (Mar 2023)</h6>
+            <h6>Interaction Design <span class="textItalic fontWeight200 TextPoppins Grey700">(May 2023)</span></h6>
+            <h6>JavaScript <span class="textItalic fontWeight200 TextPoppins Grey700">(Mar 2023)</span></h6>
 
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h6 class="textItalic TextPoppins fontWeight300">Udemy:</h6>
-            <h6>Become a Product Manager: Learn the Skills & Get the Job (Dec 2024)</h6>
-            <h6>The Complete JavaScript Course: From Zero to Expert! (Jan. 2025)</h6>
+            <h6>Become a Product Manager <span class="textItalic fontWeight200 TextPoppins Grey700">(Dec 2024)</span></h6>
+            <h6>The Complete JavaScript Course<span class="textItalic fontWeight200 TextPoppins Grey700">(Jun 2024)</span></h6>
           </div>
 
           <div class="element">
@@ -108,17 +111,17 @@
             <h5 class="fontWeight500">Design & Research </h5>
             <h6>UX Design, Usability Testing, User Research, Wireframing, Prototyping</h6>
             <h6>Design Systems, Responsive Design, Interaction Design, Visual Design</h6>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
 
             <h5 class="fontWeight500">Software</h5>
             <h6>Figma, Adobe XD, Sketch, Adobe Creative Suite</h6>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h5 class="fontWeight500">Technical Skills </h5>
             <h6>HTML, CSS, JavaScript, JQuery</h6>
             <h6>Rhino, AutoCAD, 3D Max, Unity</h6>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <div class="notDisplayMobile">
               <h5 class="fontWeight500">Architectural Design </h5>
@@ -150,6 +153,7 @@
             <h4><strong>BabyQuip | Senior User Experience Designer </strong></h4>
             <h6 class="textItalic">Oct. 2024 - Present, Full-Time</h6>
             <h6 class="textItalic TextPoppins fontWeight300">Led UX architecture across mobile and partner tools, collaborating with a graphic designer and VP of Product to align design and product goals.</h6>
+            <div class="spacingXSmall"></div>
 
             <h6 class="fontWeight500"> ➢ Platform Design / B2B Systems</h6>
             <ul class="listCircle">
@@ -159,12 +163,16 @@
               <li>Result: Reduced CS load, improved go-live clarity, and prepared GoQuip launch with minimal additional engineering work.
               </li>
             </ul>
+            <div class="spacingXSmall"></div>
+
             <h6 class="fontWeight500"> ➢ Consumer Experience / B2C Growth</h6>
             <ul class="listCircle">
               <li>Shifted rental flow from provider-first to gear-first, boosting mobile conversion by 27% and AOV by 12%.</li>
               <li>Designed and validated single-page checkout to improve completion and perceived speed (pending launch).</li>
               <li>Enabled exploration-first gear discovery to increase product views and user confidence.</li>
             </ul>
+            <div class="spacingXSmall"></div>
+
             <h6 class="fontWeight500"> ➢ Strategic Systems / Experience Architecture</h6>
             <ul class="listCircle">
 
@@ -173,11 +181,14 @@
               <li>Led UX direction while collaborating with PMs, engineers, and CS to ensure holistic rollout.</li>
             </ul>
           </div>
+          <div class="spacingSmall"></div>
+
           <div class="element">
             <h4><strong>BookYourPet | User Experience Designer </strong></h4>
 
             <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-Time | Oct. 2021 - Feb. 2024, Full-Time Contractor</h6>
             <h6 class="textItalic TextPoppins fontWeight300 ">Sole designer driving both internal tools and customer-facing UX across the platform.</h6>
+            <div class="spacingXSmall"></div>
 
 
             <h6 class="fontWeight500">➢ B2B SaaS Platform</h6>
@@ -185,10 +196,14 @@
               <li>Scaled vendor base from 10 to 500+ with redesigned booking backend and onboarding refactor.</li>
               <li>Shifted onboarding to a self-service model, reducing CS time.</li>
             </ul>
+            <div class="spacingXSmall"></div>
+
             <h6 class="fontWeight500">➢ Consumer Experience</h6>
             <ul class="listCircle">
               <li> Improved B2C mobile UX, reducing booking time by 6 mins and increasing conversion by 169%. </li>
             </ul>
+            <div class="spacingXSmall"></div>
+
             <h6 class="fontWeight500">➢ Systems Thinking</h6>
             <ul class="listCircle">
               <li>Introduced scalable design patterns across admin tools and user panels. </li>
@@ -196,6 +211,8 @@
             </ul>
 
           </div>
+          <div class="spacingSmall"></div>
+
           <div class="element">
 
             <h4><strong>LASO Health | Product Designer </strong></h4>
@@ -214,6 +231,8 @@
 
             </ul>
           </div>
+          <div class="spacingSmall"></div>
+
           <div class="element">
             <h4><strong>Modernized Mobile LLC | UX Designer </strong></h4>
             <h6 class="textItalic">June. 2023 - Aug.2023, Part-Time Contractor</h6>
@@ -229,6 +248,8 @@
 
             </ul>
           </div>
+          <div class="spacingSmall"></div>
+
           <div class="element">
             <h4><strong>vickywang.me | Freelancer </strong></h4>
             <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
