--- a/templates/shared/base_divider_short.ejs
+++ b/templates/shared/base_divider_short.ejs
@@ -1,4 +1,4 @@
 <div class="blankHXS"></div>
 <hr class="wrapperXL">
 <div class="blankHXS"></div>
-<div class="blankHTiny"></div>
+<div class="spacingSmall"></div>
