--- a/templates/shared/block_about.ejs
+++ b/templates/shared/block_about.ejs
@@ -31,14 +31,14 @@
     <div class="Grid-cell">
       <div class="element">
         <h1 class="specialTextL">About Me</h1>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <h2 class="colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
       </div>
     </div>
   </div>
 </div>
-<div class="blankHTiny"></div>
+<div class="spacingSmall"></div>
 
 
 <div class="wrapper">
