--- a/templates/shared/block_timeline.ejs
+++ b/templates/shared/block_timeline.ejs
@@ -175,7 +175,7 @@
                 <h6>&#9675; Concept & Visual Design</h6>
 
 
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
                 <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
@@ -280,7 +280,7 @@
                 <h6><a href="/architecture" class="textUnderline">Master of Architecture</a> </h6>
                 <h6>3-year program</h6>
 
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
                 <h3 class="page__job-name fontWeight400">Beijing Uni. of Tech </h3>
                 <h6 class="TextPoppins textItalic fontWeight400">2009 - 2013, Full-time</h6>
