--- a/templates/verify.ejs
+++ b/templates/verify.ejs
@@ -19,15 +19,15 @@
         <h1>Human Verification</h1>
 
         <p class="fontWeight400 Grey700">Please verify that you're not a robot before proceeding to vickywang.me.</p>
-        <div class="blankHTiny"></div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
+        <div class="spacingSmall"></div>
 
         <!-- reCAPTCHA Form -->
         <form action="/" method="GET">
           <!-- CAPTCHA widget -->
           <div class="h-captcha" data-sitekey="0788d3f8-3090-4392-bcea-a72ac240402a"></div>
-          <div class="blankHTiny"></div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
+          <div class="spacingSmall"></div>
 
           <div class="centerVH">
             <button type="submit" class="buttonLarge buttonPrimary bgVWGrey">Submit
