--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -27,7 +27,7 @@
       <div class="Grid-cell">
         <div class="element displayLaptop u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
 
@@ -36,7 +36,7 @@
         </div>
         <div class="element displayTablet  u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
 
@@ -46,7 +46,7 @@
         <div class="element displayPhone">
           <div class="element">
             <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
             <h1 class="specialTextTitle fontWeight700">that are </h1>
@@ -203,7 +203,7 @@
                  colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Business Booking Experience</h1>
 
@@ -250,11 +250,11 @@
                   colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
               <h1 class="specialTextS fontWeight700">Optimizing SaaS Subscription Growth
               </h1>
-              <div class="blankHTiny"></div>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
+              <div class="spacingSmall"></div>
 
               <ul class="listCircle">
 
@@ -305,7 +305,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
               <h1 class="specialTextS fontWeight700">Customer Booking Experience</h1>
 
               <h3 class="colorLandingText fontWeight700">Enhancing the Consumer Booking Experience
@@ -360,7 +360,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
               <h1 class="specialTextS fontWeight700">From White-Glove to Self-Service</h1>
 
               <h3 class="colorLandingText fontWeight700">Shifting from a white-glove service to a user-friendly self-service platform.
@@ -411,7 +411,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
               <h1 class="specialTextS fontWeight700">Savings Calculator</h1>
 
               <h3 class="colorLandingText fontWeight700">Uncover Prescription Meds Savings
@@ -457,7 +457,7 @@
                  colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Online Med Purchase </h1>
 
@@ -511,7 +511,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Admin Panel</h1>
 
@@ -556,7 +556,7 @@
           <a class="no-hover-effect" href="/glorify/">
             <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Experiment',
@@ -581,7 +581,7 @@
           <a class="no-hover-effect" href="/seer/">
             <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -610,7 +610,7 @@
           <a class="no-hover-effect" href="/appointa/">
             <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -670,7 +670,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Design System Creation & Optimization</h1>
 
@@ -729,14 +729,14 @@
         <div class="Grid-cell">
           <div class="element">
             <h1 class="specialTextL"> About Me</h1>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
 
             <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
           </div>
         </div>
       </div>
     </div>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
 
     <div class="wrapper">
@@ -830,7 +830,7 @@
             </div>
           </div>
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
