--- a/templates/worksamples/BYP_LH_wsbeebr/index.ejs
+++ b/templates/worksamples/BYP_LH_wsbeebr/index.ejs
@@ -20,7 +20,7 @@
       <div class="Grid-cell">
         <div class="element">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="specialTextTitle fontWeight700">Thank you for visiting!</h1>
           <div class="blankHXS"></div>
