--- a/templates/workshelf/bq_b2b_inventory_management/index.ejs
+++ b/templates/workshelf/bq_b2b_inventory_management/index.ejs
@@ -66,14 +66,9 @@
 
 
 
-  <!-- timeline -->
-
-
-  <div class="GreyBg100">
+  <div class="">
     <div class="blankHS"></div>
 
-
-    <div class="blankHTiny"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3 u-textCenter" data-module="countup">
@@ -105,13 +100,9 @@
         <div class="Grid-cell">
           <div class="element">
             <div class="stat">
-
-
-
               <h6 class="chipSmall colorBQTeal100 colorBQTeal700">
                 Reduces QA & Maintenance Overhead
               </h6>
-
               <h2 class="stat-figure">
                 <span class="stat-prefix specialTextL fontWeight700">-</span>
                 <span class="stat-number specialTextL fontWeight700" data-countup-number="75">75</span>
@@ -123,13 +114,9 @@
               <h6 class="">
                 Simplified layout + reusable components = easier maintenance
               </h6>
-
-
             </div>
-
           </div>
         </div>
-
         <div class="Grid-cell">
           <div class="element">
             <div class="stat">
@@ -141,38 +128,27 @@
                 <span class="stat-number specialTextL fontWeight700" data-countup-number="3">3</span>
                 <span class="stat-suffix">+</span>
               </h2>
-
               <h5 class="fontWeight400">
                 Business lines scaled</h5>
               <h6 class="">
                 Supported Baby, Party, and GoQuip with no system rebuild </h6>
-
             </div>
-
           </div>
         </div>
-
       </div>
-
-
-
-
     </div>
-    <div class="blankHXS"></div>
-
+    <div class="blankHXXS"></div>
     <div class="wrapper">
       <div class="TBcarousel Grid--center Grid Grid--full Grid--gutters u-textCenter" aria-label="TBcarousel" tabindex="0" id="TBcarousel1">
         <div class="TBslides">
           <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 4" tabindex="0">
             <div class="crop_mockup">
               <img src="after_one_unified_view.gif" alt="1 unified view">
-
             </div>
           </div>
           <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 4" tabindex="0">
             <div class="crop_mockup">
               <img src="after_persistent_filters.gif" alt="Persistent filters">
-
             </div>
           </div>
           <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 4" tabindex="0">
@@ -180,7 +156,6 @@
               <img src="after_inline_editing.gif" alt="Inline editing">
             </div>
           </div>
-
         </div>
         <div class="blankHXXS"></div>
 
@@ -190,23 +165,14 @@
           </a>
           <a class="TBsliderNav active" aria-label="Go to slide 2" tabindex="0">
             <div>Persistent filters</div>
-
           </a>
           <a class="TBsliderNav" aria-label="Go to slide 3" tabindex="0">
             <div>Inline editing</div>
           </a>
-
         </div>
         <div class="blankHXXS"></div>
-
       </div>
     </div>
-
-
-    <div class="blankHXS"></div>
-
-
-
     <!-- Case study starts -->
     <main>
       <nav class="new_side_bar flipBtn">
@@ -233,50 +199,53 @@
         </ul>
       </nav>
       <div>
-        <div class="blankHXS"></div>
         <section id="content1">
           <div class="wrapper">
             <div class="Grid Grid--full Grid--gutter">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blankHXXS"></div>
                   <h3><span class=" fontWeight700">Problem </span></h3>
                   <h5><span class="">BabyQuip’s original inventory tools were built for small-scale providers. As the platform grew, two core issues emerged:</span></h5>
-                          <div class="blankHXS"></div>
-
-                  <h5><span class="fontWeight400"> 1. Power QPs (with dozens or hundreds of items) struggled to manage listings efficiently: </span></h5>
-                  <ul class="listCircle">
-                    <li>4–5 clicks to edit a single gear item</li>
-                    <li>Fragmented views across multiple pages</li>
-                    <li>No persistent filters; long lists broke layout and usability</li>
-                  </ul>
-
-
-                  <h5><span class="fontWeight400"> 2. Many QPs weren’t listing their full inventory — especially unlisted, featured, or popular gear:
-                    </span></h5>
-                  <ul class="listCircle">
-                    <li>Hidden “Unlisted” tab made discovery harder</li>
-                    <li>No prompts or clear calls to action</li>
-                    <li>Resulted in underutilized supply and missed bookings</li>
-                  </ul>
-      
-        <div class="blankHXS"></div>
-
+                  <div class="rowToColumn centerVH">
+                    <div class="widthMax">
+                      <h5><span class="fontWeight400"> 1. Power QPs (with dozens or hundreds of items) struggled to manage listings efficiently: </span></h5>
+                      <ul class="listCircle">
+                        <li>4–5 clicks to edit a single gear item</li>
+                        <li>Fragmented views across multiple pages</li>
+                        <li>No persistent filters; long lists broke layout and usability</li>
+                      </ul>
+                    </div>
+                    <div class="widthFitContent">
+                      <img class="widthXS" src="graphic_power_user.svg" alt="icon arrow">
+                    </div>
+                  </div>
+                  <div class="rowToColumn centerVH">
+                    <div class="widthMax">
+                      <h5><span class="fontWeight400"> 2. Many QPs weren’t listing their full inventory, especially unlisted, featured, or popular gear:
+                        </span></h5>
+                      <ul class="listCircle">
+                        <li>Hidden “Unlisted” tab made discovery harder</li>
+                        <li>No prompts or clear calls to action</li>
+                        <li>Resulted in underutilized supply and missed bookings</li>
+                      </ul>
+                    </div>
+                    <div class="widthFitContent">
+                      <img class="widthXS" src="graphic_unlisted_gear.svg" alt="icon arrow">
+                    </div>
+                  </div>
                   <div class="paddingS WhiteBg borderRadiusS">
                     <h5><span class="fontWeight300">✏️ While the initial request was to add a “Unlisted Gear” tab, I proposed a structural redesign: A flattened, unified interface that supports both efficient editing and inventory growth.</span></h5>
                   </div>
-                          <div class="blankHS"></div>
-
-                  <img class="crop_mockup" src="before_crib_stroller.gif" alt="before">
+                  <div class="spacingSmall"></div>
 
                   <!-- Trigger -->
                   <a href="" class="open-modal textUnderline" data-modal="modal1">
-                    <h5 class="fontWeight400" aria-label="Open legacy flow details">Legacy Flow: Inefficient for Scaling</h5>
+                    <h5 class="fontWeight400" aria-label="Open legacy flow details">View Legacy Flow: Inefficient for Scaling &#10141;</h5>
                   </a>
                   <!-- Modal 1 -->
                   <div id="modal1" class="modal hidden">
                     <span class="modal-close">
-                      <img class="iconXforModal" src="../icon/delete.svg" alt="×">
+                      <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
                     </span>
 
                     <div class="modal-content">
@@ -289,6 +258,11 @@
 
                     </div>
                   </div>
+                  <div class="spacingMedium"></div>
+
+                  <img class="crop_mockup" src="before_crib_stroller.gif" alt="before">
+
+
                 </div>
               </div>
             </div>
@@ -312,21 +286,44 @@
 
                   <ul class="listCircle">
                     <li><span class="fontWeight500">Total QPs:</span> 5,566</li>
-                    <li><span class="fontWeight500">Active QPs:</span> 2,551 → <span class="fontWeight500">~46%</span> active engagement</li>
+                    <li><span class="fontWeight500">Active QPs:</span> 2,551 → only <span class="fontWeight500">~46%</span> of providers are actively using the platform</li>
+                    <li><span class="fontWeight500">Inactive QPs/low-engagement accounts:</span> make up <span class="fontWeight500"> ~54%</span> suggesting friction or drop-off</li>
+                    <li><span class="fontWeight500">Power QPs:</span> 2,551 → only <span class="fontWeight500">top 10%</span> likely manage the majority of listings, but are held back by time cost</li>
                     <li><span class="fontWeight500">Narrow usage patterns:</span> Most QPs list fewer than 3 categories</li>
                     <li><span class="fontWeight500">Platform underutilized:</span> 46% list under 10% of available gear</li>
-
                   </ul>
-                  <div class="blankHS"></div>
+
+                </div>
+              </div>
+            </div>
+          </div>
 
 
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+
+                <div class="element">
+                  <img src="graphic_powerQP.svg" alt="legacy screens">
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <img src="graphic_growingQP.svg" alt="legacy screens">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="Grid Grid--full Grid--gutter">
+              <div class="Grid-cell">
+                <div class="element">
                   <h5><span class="fontWeight500">Power QPs</span> abandoned updates during peak season due to time cost</h5>
                   <div class="paddingS WhiteBg borderRadiusS">
                     <h5><span class="fontWeight300">💡 Our tools were optimized for small catalogs — but power
                         users manage most of the inventory.</span></h5>
                   </div>
-                  <div class="blankHS"></div>
-
+                  <div class="spacingSmall"></div>
                   <div class="paddingS WhiteBg borderRadiusS">
                     <h5><span class="fontWeight300">💡 Most providers are inactive or underutilizing the platform, but power QPs — the few managing large inventories — need more efficient tools.
                       </span></h5>
@@ -335,6 +332,7 @@
               </div>
             </div>
           </div>
+
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
