--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -29,7 +29,7 @@
         <div class="Grid-cell">
           <div class="element u-textCenter">
             <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-            <div class="blankHTiny"></div>
+            <div class="spacingSmall"></div>
             <h1 class="fontWeight700 newLandingTitle">I design experiences that are intuitive for users, efficient for businesses, and resilient as systems.
             </h1>
             <!-- <h4 class="fontWeight300">I design end-to-end product experiences for B2B and B2C platforms—streamlining complex tools, mapping journeys to business goals, and building clarity into every interaction.
@@ -95,7 +95,7 @@
 
     </div>
 
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
         <div class="element">
@@ -163,7 +163,7 @@
         <div class="accContent">
           <div class="Grid Grid--cols-2 u-textCenter colorBgImg">
             <div class="Grid-cell">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
 
 
@@ -192,13 +192,13 @@
 
                   </div>
                 </div>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
               </div>
             </div>
 
             <div class="Grid-cell">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <div class="element">
                 <img class="modal-target" src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
@@ -284,7 +284,7 @@
           <div class="element">
             <a href="bq_b2b_inventory_management/"> <button class="buttonMedium buttonFlip WhiteBg"> View Case Study </button></a>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -314,7 +314,7 @@
         <div class="accContent">
           <div class="Grid Grid--cols-2 u-textCenter colorBgImg">
             <div class="Grid-cell">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
 
 
@@ -324,13 +324,13 @@
                 <h6>Onboarding with 30+ rigid screens</h6>
 
 
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
               </div>
             </div>
 
             <div class="Grid-cell">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <div class="element">
                 <img class="modal-target" src="diagram_qp_onboarding_after.svg" alt="Redesigned inventory UX">
@@ -401,7 +401,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -442,7 +442,7 @@
               <div class="element">
                 <h5 class="fontWeight400">Onboarding & Subscription</h5>
                 <h6 class="fontWeight600 textItalic colorYellowVW700">→ Drives conversion</h6>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Less than 10% of sign-ups activated a subscription. Most churned during setup due to friction—Stripe connection, team setup, and required services blocked trial access.</h5>
                 <h6>→ Every support ticket delayed conversion.</h6>
                 <h6>→ BYP couldn't scale past hobbyists due to this onboarding wall.</h6>
@@ -473,7 +473,7 @@
                 <h5 class="fontWeight400">Booking & Business Operations</h5>
                 <h6 class="fontWeight600 textItalic colorYellowVW700">→ Powers retention</h6>
 
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Admins couldn’t override anything. Bookings failed due to rigid rules—unavailable team members, add-ons, or unclear time logic.</h5>
                 <h6>→ Pet owners dropped off. Business owners abandoned BYP for more flexible tools.</h6>
                 <h6>→ Internal team couldn’t support last-minute requests without hacks.</h6>
@@ -504,7 +504,7 @@
 
 
 
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -621,7 +621,7 @@
             </div>
           </div>
 
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -685,7 +685,7 @@
               <div class="element">
                 <h5 class="fontWeight400">Exploration: Shopping & Landing
                 </h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Users dropped off early due to rigid trip entry or confusion about the service</h5>
                 <h5><strong>Insight:</strong> Fast vs cautious users had different booking triggers</h5>
                 <h5><strong>Solution:</strong> Category-first browse layout, flexible landing paths</h5>
@@ -696,7 +696,7 @@
               <div class="element">
                 <h5 class="fontWeight400">Consideration: Trip Input & QP Clarity
                 </h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Users had to complete rigid trip forms (dates, times, address) up front, with no way to revisit or edit later—causing drop-off and frustration.</h5>
                 <h5><strong>Insight:</strong> Most users accepted default values but needed a way to view or adjust info after exploring gear.</h5>
                 <h5><strong>Solution:</strong> Introduced modular trip inputs with inline visibility, smart defaults, and persistent edit access—making the trip context flexible, skippable, and always available.</h5>
@@ -705,7 +705,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h5 class="fontWeight400">Checkout Optimization</h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Survey-style checkout discouraged completion</h5>
                 <h5><strong>Insight:</strong> Final steps felt excessive and redundant</h5>
                 <h5><strong>Solution:</strong> Condensed form into a single-page checkout</h5>
@@ -715,7 +715,7 @@
           </div>
 
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
       </div>
     </div>
     </div>
@@ -768,7 +768,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h5 class="fontWeight400">Checkout Page Enhancements</h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Users dropped off early due to rigid trip entry or confusion about the service</h5>
                 <h5><strong>Insight:</strong> Fast vs cautious users had different booking triggers</h5>
                 <h5><strong>Solution:</strong> Category-first browse layout, flexible landing paths</h5>
@@ -778,7 +778,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h5 class="fontWeight400">QP Selection Improvements</h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Users had to complete rigid trip forms (dates, times, address) up front, with no way to revisit or edit later—causing drop-off and frustration.</h5>
                 <h5><strong>Insight:</strong> Most users accepted default values but needed a way to view or adjust info after exploring gear.</h5>
                 <h5><strong>Solution:</strong> Introduced modular trip inputs with inline visibility, smart defaults, and persistent edit access—making the trip context flexible, skippable, and always available.</h5>
@@ -787,7 +787,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h5 class="fontWeight400">Item Details Polish</h5>
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
                 <h5><strong>Problem:</strong> Survey-style checkout discouraged completion</h5>
                 <h5><strong>Insight:</strong> Final steps felt excessive and redundant</h5>
                 <h5><strong>Solution:</strong> Condensed form into a single-page checkout</h5>
@@ -795,7 +795,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -875,7 +875,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -976,7 +976,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -1064,7 +1064,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -1152,7 +1152,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
         </div>
       </div>
     </div>
@@ -1182,7 +1182,7 @@
           <a class="no-hover-effect" href="/glorify/">
             <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Experiment',
@@ -1207,7 +1207,7 @@
           <a class="no-hover-effect" href="/seer/">
             <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -1236,7 +1236,7 @@
           <a class="no-hover-effect" href="/appointa/">
             <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -1296,7 +1296,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Design System Creation & Optimization</h1>
 
@@ -1366,7 +1366,7 @@
         </div>
       </div>
     </div>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
 
     <div class="wrapper">
@@ -1439,7 +1439,7 @@
             </div>
           </div>
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
