--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -88,7 +88,7 @@
         fontWeight:'fontWeight900'
         }) %>
       </div>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell ">
@@ -100,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3 u-textCenter" data-module="countup">
