--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -27,7 +27,7 @@
       <div class="Grid-cell">
         <div class="element u-textCenter">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-          <div class="blankHTiny"></div>
+          <div class="spacingSmall"></div>
 
           <h1 class="fontWeight700 newLandingTitle">a UX designer focused on clean, scalable experiences that drive real impact.
           </h1>
@@ -99,7 +99,7 @@
 
   </div>
 
-  <div class="blankHTiny"></div>
+  <div class="spacingSmall"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
@@ -222,10 +222,10 @@
         <div class="Grid Grid--full Grid--gutter displayLaptop">
           <div class="Grid-cell">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <img class="modal-target" src="cover_inventory_management.svg" alt="">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
             </div>
           </div>
@@ -304,7 +304,7 @@
         <div class="Grid Grid--gutters Grid--full">
           <div class="Grid-cell">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
               <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button>
             </div>
           </div>
@@ -598,7 +598,7 @@
           <a class="no-hover-effect" href="/glorify/">
             <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Experiment',
@@ -623,7 +623,7 @@
           <a class="no-hover-effect" href="/seer/">
             <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -652,7 +652,7 @@
           <a class="no-hover-effect" href="/appointa/">
             <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
             <div class="element">
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Experiment',
@@ -712,7 +712,7 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
+              <div class="spacingSmall"></div>
 
               <h1 class="specialTextS fontWeight700">Design System Creation & Optimization</h1>
 
@@ -759,7 +759,7 @@
             </div>
           </div>
         </div>
-        <div class="blankHTiny"></div>
+        <div class="spacingSmall"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
