--- a/templates/caselog/mobile_wireframe/index.ejs
+++ b/templates/caselog/mobile_wireframe/index.ejs
@@ -23,11 +23,11 @@
   <div class="ProjectBannerInnerND">
     <img class="iconMax" src="../logo_babyquip_vertical.svg" alt="Logo">
     <h2 class="ProjectBannerInnerElement"><strong>Full Rental Journey Wireframe</strong> </h2>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
 
     <h3 class="Grid Grid--center colorBlack">For pet business owners booking appointments for their customers</h3>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
 
     <a href="https://www.figma.com/proto/g0r9aZkxovW1vD5oJ4jvDZ/Enhancing-the-B2B-Selling-%26-Booking-Experience?page-id=2001%3A38623&amp;node-id=2001-39176&amp;viewport=4032%2C1924%2C0.09&amp;t=sBVSsXxg9STW6os4-1&amp;scaling=contain&amp;content-scaling=fixed&amp;starting-point-node-id=2001%3A39176" target="_blank"> <button class="buttonMedium buttonFlip colorBgBYPgrey">Open Figma Slides</button></a>
@@ -226,7 +226,7 @@
         fontWeight:'fontWeight900'
         }) %>
       </div>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell ">
@@ -238,7 +238,7 @@
         </div>
       </div>
     </div>
-    <div class="blankHTiny"></div>
+    <div class="spacingSmall"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3 u-textCenter" data-module="countup">
