--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -35,10 +35,10 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
 
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonMedium buttonFlip <%= bannerButtonColor %>">Open Figma Slides</button></a>
@@ -53,10 +53,10 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonMedium buttonFlip  <%= bannerButtonColor %>">Open Figma Slides</button></a>
 
@@ -71,10 +71,10 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
 
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonMedium buttonFlip <%= bannerButtonColor %>">Open Figma Slides</button></a>
